text-alignment fix

--- a/css/style.scss
+++ b/css/style.scss
@@ -597,6 +597,10 @@ a {
 	.connect p {
 		text-align: justify;
 	}
+
+	.connect .socials {
+		text-align: center;
+	}
 }
 
 
